--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,5 @@ tensorflow==2.0.1
 ## to install pyInstaller 3.5.dev0+d74052489 development:
 # pip install https://github.com/pyinstaller/pyinstaller/tarball/develop --user
 
+# For those without AVX2 support:
+# pip install --upgrade https://github.com/fo40225/tensorflow-windows-wheel/blob/master/2.0.0/py37/CPU/sse2/tensorflow-2.0.0-cp37-cp37m-win_amd64.whl
